# projekt-skola

projškola/: CMakeLists.txt
projškola/projškola/: CMakeLists.txt  character.h  game_utils.h  location.h  projškola.cpp  projškola.h
